# book-bounty

./: .env.example  .gitattributes  .gitignore  BOOKBOUNTY_IMPLEMENTATION_GUIDE.md  CLAUDE.md  GEMINI.md  README.md  render.yaml  v2_AI_ENGINE_SPEC.md  v2_PRODUCT_VISION.md  v3_PRODUCT_VISION.md
.claude/: settings.local.json
backend/: .env.example  build.sh  mypy.ini  pyproject.toml  repro_ebay_server.py  repro_ebay_url.py  ruff.toml
backend/core/: settings.py  urls.py
backend/triage/: admin.py  ai_engine.py  apps.py  models.py  serializers.py  services.py  test_api.py  test_services.py  tests.py  urls.py  views.py
backend/triage/migrations/: 0001_initial.py  0002_book_cover_url_book_description_and_more.py  0003_cullinggoal_catalogentry_ai_recommendation_and_more.py  0004_catalogentry_resolved_at.py  0005_alter_book_author_alter_book_isbn_alter_book_title_and_more.py  0006_book_cover_image.py  0007_book_page_count.py  0008_catalogentry_marketplace_description.py  0009_add_user_to_cullinggoal_and_catalogentry.py  0010_alter_catalogentry_user_alter_cullinggoal_user.py
demo/: .env.example  demo.js  package-lock.json  package.json
docs/: CODE_REVIEW.md  DOCUMENTATION_GUIDE.md  MULTI_AGENT_ORCHESTRATION.md  REMEDIATION_PLAN.md  REMEDIATION_REPORT.md
docs/architecture/: AI_SPEC.md  DEPLOYMENT.md  ORCHESTRATION.md
docs/fellowship/: MEMORY.md
docs/legacy/: IMPROVEMENTS.md
docs/marketing/: COHORT_NARRATIVES.md  DEMO_SCRIPTS.md  PITCH.md
docs/staff/: REFLECTION.md  (+1 more)
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
(+60 files in other folders)
